# cold-start-product-search-reliability

./: .dockerignore  .gitattributes  .gitignore  Amazon09_run_controller_verified_v18.ps1  Amazon09_verify_controller_preflight_v14.ps1  Dockerfile  FINAL_VALIDATION_REPORT.md  IMPROVEMENT_AUDIT.md  MANIFEST.in  Makefile  PROJECT_IMPLEMENTATION_SUMMARY.md  README.md  SOURCES.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  ci35-promotion-family-ablation.yml  ci36-gate-only-popularity-credit-ablation.yml  ci37-row-level-promotion-ablation.yml  dependency-review.yml  (+2 more)
configs/: smoke.yaml
constraints/: validated.txt
docs/: architecture.md  data_contracts.md  improvement_report.md  known_limitations.md  model_card.md  results.md  v5_evidence_verification.md  v5_selective_promotion_closeout.md  windows_local_qualification.md
scripts/: _bootstrap.py  artifact_transport_validation.py  build_release.py  clean.py  download_public_data.py  generate_candidate_handoff.py  integration_validation.py  manage_release.py  package_project.py  prepare_output.py  pytest_completion_plugin.py  reproducibility_check.ps1  reproducibility_check.py  reproducibility_check.sh  run_dynamic_simulation.py  run_full_pipeline.ps1  run_full_pipeline.py  run_full_pipeline.sh  run_model_stage.py  run_ope_validation.py  run_policy_sensitivity.py  run_tests.py  serve.py  train_dcn.py  uvicorn_validation.py  validate_candidate_handoff.py  verify_build_reproducibility.py  verify_v5_closeout.py
tests/: test_adapters.py  test_api.py  test_bundle.py  test_candidate_handoff.py  test_candidates.py  test_canonical_pipeline.py  test_ci25_canonical_artifact_ci_contract.py  test_ci_security.py  test_config.py  test_data.py  test_dense.py  test_dynamic.py  test_hybrid.py  test_lambdamart_persistence.py  test_metrics.py  test_minimum_entry_boost.py  test_ope.py  test_policy.py  test_policy_sensitivity_dynamic_guardrail.py  test_provenance.py  test_qrsbt.py  test_release.py  test_release_build.py  test_release_packaging.py  test_release_store.py  test_reproducibility_semantic_comparison.py  test_retrieval.py  test_sensitivity.py  test_temporal_leakage.py  test_temporal_retrieval_context.py
(+513 files in other folders)
