[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cold-start-product-search-reliability"
version = "0.6.0"
description = "Reliability-aware cold-start product search with query-conditioned substitute transfer"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "numpy>=1.24,<3",
  "pandas>=2.0,<4",
  "scipy>=1.10,<2",
  "scikit-learn>=1.3,<2",
  "xgboost-cpu>=3.2,<3.3; platform_system == 'Linux' or platform_system == 'Windows'",
  "xgboost>=3.2,<3.3; platform_system == 'Darwin'",
  "fastapi>=0.110,<1",
  "uvicorn>=0.27,<1",
  "pydantic>=2.5,<3",
  "PyYAML>=6.0,<7",
  "joblib>=1.3,<2",
]

[project.optional-dependencies]
advanced = ["torch>=2.1,<3"]
qwen = [
  "torch>=2.1,<3",
  "transformers>=4.51.0",
  "peft>=0.12",
  "accelerate>=0.30",
  "sentence-transformers>=3.0",
]
faiss = ["faiss-cpu>=1.8,<2"]
dev = [
  "pytest>=8.0,<10",
  "pytest-cov>=5,<8",
  "ruff>=0.5,<1",
  "httpx>=0.27,<1",
  "httpx2>=2,<3",
  "build>=1.2,<2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
"scripts/integration_validation.py" = ["E402"]
"scripts/prepare_output.py" = ["E402"]
"scripts/package_project.py" = ["E402"]
"scripts/verify_build_reproducibility.py" = ["E402"]
"scripts/build_release.py" = ["E402"]
"scripts/run_dynamic_simulation.py" = ["E402"]
"scripts/run_model_stage.py" = ["E402"]
"scripts/run_ope_validation.py" = ["E402"]
"scripts/run_policy_sensitivity.py" = ["E402"]
"scripts/serve.py" = ["E402"]
"scripts/train_dcn.py" = ["E402"]
"scripts/manage_release.py" = ["E402"]
"scripts/generate_candidate_handoff.py" = ["E402"]
"scripts/validate_candidate_handoff.py" = ["E402"]

[tool.coverage.run]
source = ["product_search"]
omit = [
  "src/product_search/advanced/qwen.py",
  "src/product_search/ranking/dcn.py",
  "src/product_search/retrieval/faiss_index.py",
]

[tool.coverage.report]
fail_under = 70
show_missing = true
skip_covered = true
